--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=config-server
 server.port=8888
 
 
-spring.cloud.config.server.git.uri=https://github.com/forezp/SpringcloudConfig/
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/YuriZhirkov/springCloud/
+spring.cloud.config.server.git.searchPaths=rep
 spring.cloud.config.label=master
-spring.cloud.config.server.git.username=your username
-spring.cloud.config.server.git.password=your password
+spring.cloud.config.server.git.username=YuriZhirkov
+spring.cloud.config.server.git.password=yuri1562033
